--- a/DL/bootcourse/mlp.ipynb
+++ b/DL/bootcourse/mlp.ipynb
@@ -203,7 +203,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MultiLayerPerceptronClass(nn.Module):\n",
+    "    def __init__(self, name='mlp', xdim=784, hdim=256, ydim = 10):\n",
+    "        super(MultiLayerPerceptronClass,self).__init__()\n",
+    "        self.name = name\n",
+    "        self.xdim = xdim\n",
+    "        self.hdim = hdim\n",
+    "        self.ydim = ydim\n",
+    "        self.lin_1 = nn.Linear(self.xdim, self.hdim)\n",
+    "        self.lin_2 = nn.Linear(self.hdim, self.ydim)\n",
+    "        self.init_param()"
+   ]
   }
  ],
  "metadata": {
