--- a/DL/bootcourse/mlp.ipynb
+++ b/DL/bootcourse/mlp.ipynb
@@ -213,7 +213,16 @@
     "        self.ydim = ydim\n",
     "        self.lin_1 = nn.Linear(self.xdim, self.hdim)\n",
     "        self.lin_2 = nn.Linear(self.hdim, self.ydim)\n",
-    "        self.init_param()"
+    "        self.init_param()\n",
+    "\n",
+    "    def init_param(self):\n",
+    "        nn.init.kaiming_normal_(self.lin_1.weight)\n",
+    "        nn.init.zeros_(self.lin_1.bias)\n",
+    "        nn.init.kaiming_normal_(self.lin_2.weight)\n",
+    "        nn.init.zeros_(self.lin_2.bias)\n",
+    "    \n",
+    "\n",
+    "    def forward(self,x):"
    ]
   }
  ],
