--- a/DL/bootcourse/mlp.ipynb
+++ b/DL/bootcourse/mlp.ipynb
@@ -208,9 +208,9 @@
     "    def __init__(self, name='mlp', xdim=784, hdim=256, ydim = 10):\n",
     "        super(MultiLayerPerceptronClass,self).__init__()\n",
     "        self.name = name\n",
-    "        self.xdim = xdim\n",
-    "        self.hdim = hdim\n",
-    "        self.ydim = ydim\n",
+    "        self.xdim = xdim # input layer\n",
+    "        self.hdim = hdim # hidden layer\n",
+    "        self.ydim = ydim # output layer\n",
     "        self.lin_1 = nn.Linear(self.xdim, self.hdim)\n",
     "        self.lin_2 = nn.Linear(self.hdim, self.ydim)\n",
     "        self.init_param()\n",
@@ -222,13 +222,70 @@
     "        nn.init.zeros_(self.lin_2.bias)\n",
     "    \n",
     "\n",
-    "    def forward(self,x):"
+    "    def forward(self,x):\n",
+    "        net = x\n",
+    "        net = self.lin_1(net)\n",
+    "        net = F.relu(net)\n",
+    "        net = self.lin_2(net)\n",
+    "        return net\n",
+    "M = MultiLayerPerceptronClass(name='mlp', xdim = 784, hdim = 256, ydim = 10).to(device) # 사용하는 cpu or gpu로 넘겨줌\n",
+    "loss = nn.CrossEntropyLoss()\n",
+    "optm = optim.Adam(M.parameters(), lr = 1e-3)\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_numpy = np.random.rand(2,784)\n",
+    "x_torch = torch.from_numpy(x_numpy).float().to(device)\n",
+    "y_torch = M.forward(x_torch)\n",
+    "y_numpy = y_torch.detach().cpu().numpy()\n",
+    "\n",
+    "print('x_numpy:\\n', x_numpy)\n",
+    "print('x_torch:\\n', x_torch)\n",
+    "print('y_torch:\\n', y_torch)\n",
+    "print('y_numpy:\\n', y_numpy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.set_printoptions(precision=3)\n",
+    "n_param = 0\n",
+    "for p_idx, (param_name, param) in enumerate(M.named_parameters()):\n",
+    "    param_numpy = param.detach().cpu().numpy()\n",
+    "    n_param += len(param_numpy.reshape(-1))\n",
+    "    print('[%d] name:[%s].'%(p_idx,param_name, param_numpy.shape))\n",
+    "    print('      val%s'%(param_numpy.reshape(-1)[:5]))\n",
+    "print('Total number of parameters:[%s].'%(format(n_param,'d')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func_eval(model, data_iter, device):\n",
+    "    with torch.no_grad():\n",
+    "        model.eval()\n",
+    "        n_total, n_correct = 0, 0\n",
+    "        for batch_in, batch_out in data_iter:\n",
+    "            y_trgt = batch_out.to(device)\n",
+    "            model_pred = model(batch_in.view())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.12 ('da')",
    "language": "python",
    "name": "python3"
   },
@@ -242,9 +299,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.14"
+   "version": "3.8.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "451282c7329e2a6a364ca3aa9d61cbc27edaeb5d17f404c45e9cca05e3b54b52"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
