--- a/DL/lecture/cnn/dog_breed/alexnet.ipynb
+++ b/DL/lecture/cnn/dog_breed/alexnet.ipynb
@@ -1642,8 +1642,8 @@
     "    base, train_loss_list, val_loss_list = train_baseline(model, train_iter, val_iter, optimizer, EPOCHS)\n",
     "    torch.save(base,'baseline.pt')\n",
     "    \n",
-    "    train_loss_msg = train_loss_list[-5]\n",
-    "    val_loss_msg = val_loss_list[-5]\n",
+    "    train_loss_msg = str(train_loss_list[-5])\n",
+    "    # val_loss_msg = str(val_loss_list[-5])\n",
     "    \n",
     "    for i in range(-4, 0):\n",
     "        train_loss_msg += f' ---> {train_loss_list[i]}'\n",
