--- a/DL/lecture/cnn/dog_breed/alexnet.ipynb
+++ b/DL/lecture/cnn/dog_breed/alexnet.ipynb
@@ -60,6 +60,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def send_plot(train_loss_list, val_loss_list):\n",
+    "    with tempfile.TemporaryDirectory() as tempDir:\n",
+    "        if os.path.exists(tempDir):\n",
+    "            plt.plot(train_loss_list)\n",
+    "            plt.plot(val_loss_list)\n",
+    "            plt.savefig(f'{tempDir}/val_plot.png')\n",
+    "            with open(f'{tempDir}/val_plot.png', 'rb') as f:\n",
+    "                content = f.read()\n",
+    "                post_file(config.user_token, config.channel_id, f.name, content)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -312,8 +329,8 @@
     "import copy\n",
     " \n",
     "def train_baseline(model ,train_loader, val_loader, optimizer, num_epochs):\n",
-    "    train_loss_ = []\n",
-    "    val_loss_ = []\n",
+    "    train_loss_list = []\n",
+    "    val_loss_list = []\n",
     "\n",
     "    best_acc = 0.0  \n",
     "    best_model_wts = copy.deepcopy(model.state_dict()) \n",
@@ -334,15 +351,16 @@
     "        print('val Loss: {:.4f}, val Accuracy: {:.2f}%'.format(val_loss, val_acc))\n",
     "        print('Completed in {:.0f}m {:.0f}s'.format(time_elapsed // 60, time_elapsed % 60))\n",
     "\n",
-    "        train_loss_.append(round(train_loss, 5))\n",
-    "        val_loss_.append(round(val_loss, 5))\n",
+    "        train_loss_list.append(round(train_loss, 5))\n",
+    "        val_loss_list.append(round(val_loss, 5))\n",
     "\n",
-    "        if epoch % 100 == 0:\n",
-    "            post_msg = f'EPOCH : {epoch}\\ntrain loss : {train_loss_}\\nval loss : {val_loss_}\\nbest val acc : {max(best_acc)}'\n",
+    "        if epoch % 50 == 0:\n",
+    "            post_msg = f'EPOCH : {epoch}\\ntrain loss : {train_loss}\\nval loss : {val_loss}\\nbest val acc : {best_acc}'\n",
     "            res_ = post_message(config.token, config.channel_id, post_msg)\n",
+    "            send_plot(train_loss_list, val_loss_list)\n",
     "\n",
     "    model.load_state_dict(best_model_wts)  \n",
-    "    return model, train_loss_, val_loss_\n",
+    "    return model, train_loss_list, val_loss_list\n",
     " \n",
     "\n"
    ]
@@ -1652,17 +1670,17 @@
     "    post_msg = f'학습이 완료되었습니다\\ntrain loss : {train_loss_msg}\\nmin val loss : {min(val_loss_list)}\\n ephoc of best val loss : {val_loss_list.index(min(val_loss_list))}'\n",
     "    res_ = post_message(config.token, config.channel_id, post_msg)\n",
     "\n",
-    "    with tempfile.TemporaryDirectory() as tempDir:\n",
-    "        if os.path.exists(tempDir):\n",
-    "            plt.plot(train_loss_list)\n",
-    "            plt.plot(val_loss_list)\n",
-    "            plt.savefig(f'{tempDir}/val_plot.png')\n",
-    "            with open(f'{tempDir}/val_plot.png', 'rb') as f:\n",
-    "                content = f.read()\n",
-    "                # print('temp dir: ', tempDir)\n",
-    "                # post_message(config.token, config.channel_id, content)\n",
-    "                post_file(config.user_token, config.channel_id, f.name, content)\n",
-    "                # print(f.name)\n",
+    "    # with tempfile.TemporaryDirectory() as tempDir:\n",
+    "    #     if os.path.exists(tempDir):\n",
+    "    #         plt.plot(train_loss_list)\n",
+    "    #         plt.plot(val_loss_list)\n",
+    "    #         plt.savefig(f'{tempDir}/val_plot.png')\n",
+    "    #         with open(f'{tempDir}/val_plot.png', 'rb') as f:\n",
+    "    #             content = f.read()\n",
+    "    #             # print('temp dir: ', tempDir)\n",
+    "    #             # post_message(config.token, config.channel_id, content)\n",
+    "    #             post_file(config.user_token, config.channel_id, f.name, content)\n",
+    "    #             # print(f.name)\n",
     "\n",
     "\n",
     "except Exception as e:\n",
