--- a/DL/assignment/dog_breed/test.ipynb
+++ b/DL/assignment/dog_breed/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,6 +593,28 @@
     "\n",
     "test_x = images[:n_sample]\n",
     "test_y = labels[:n_sample]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([16, 3, 224, 224]),\n",
+       " tensor([ 92, 108, 106,  19,  59,  65,  18,  56,  83,  22,  68,  11,  37,  72,\n",
+       "          19, 114]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images.size(), labels"
    ]
   },
   {
@@ -957,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
