update file directory

--- a/DL/assignment/trash_detection/predict_show.ipynb
+++ b/DL/assignment/trash_detection/predict_show.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,37 +20,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = read_image(\"./data/batch_02_vt/0002.jpg\")\n",
+    "# img = read_image(\"./data/batch_02_vt/0002.jpg\")\n",
     "\n",
-    "# Step 1: Initialize model with the best available weights\n",
-    "weights = FasterRCNN_ResNet50_FPN_V2_Weights.DEFAULT\n",
-    "model = fasterrcnn_resnet50_fpn_v2(weights=weights)#, box_score_thresh=0.6)\n",
-    "model.eval()\n",
+    "# # Step 1: Initialize model with the best available weights\n",
+    "# weights = FasterRCNN_ResNet50_FPN_V2_Weights.DEFAULT\n",
+    "# model = fasterrcnn_resnet50_fpn_v2(weights=weights)#, box_score_thresh=0.6)\n",
+    "# model.eval()\n",
     "\n",
-    "# Step 2: Initialize the inference transforms\n",
-    "preprocess = weights.transforms()\n",
+    "# # Step 2: Initialize the inference transforms\n",
+    "# preprocess = weights.transforms()\n",
     "\n",
-    "# Step 3: Apply inference preprocessing transforms\n",
-    "batch = [preprocess(img)]\n",
+    "# # Step 3: Apply inference preprocessing transforms\n",
+    "# batch = [preprocess(img)]\n",
     "\n",
-    "# Step 4: Use the model and visualize the prediction\n",
-    "prediction = model(batch)[0]\n",
-    "labels = [weights.meta[\"categories\"][i] for i in prediction[\"labels\"]]\n",
-    "box = draw_bounding_boxes(img, boxes=prediction[\"boxes\"],\n",
-    "                          labels=labels,\n",
-    "                          colors=\"red\",\n",
-    "                          width=2, font_size=15)\n",
-    "im = to_pil_image(box.detach())\n",
-    "im.show()"
+    "# # Step 4: Use the model and visualize the prediction\n",
+    "# prediction = model(batch)[0]\n",
+    "# labels = [weights.meta[\"categories\"][i] for i in prediction[\"labels\"]]\n",
+    "# box = draw_bounding_boxes(img, boxes=prediction[\"boxes\"],\n",
+    "#                           labels=labels,\n",
+    "#                           colors=\"red\",\n",
+    "#                           width=2, font_size=15)\n",
+    "# im = to_pil_image(box.detach())\n",
+    "# im.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=1.27s)\n",
+      "Done (t=1.48s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=1.53s)\n",
+      "Done (t=1.21s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11564b3520>"
+       "<matplotlib.image.AxesImage at 0x7f0552d38b20>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -423,36 +423,36 @@
        ")"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "device = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
+    "device = 'cpu'\n",
     "model = fasterrcnn_resnet50_fpn_v2()#weights = FasterRCNN_ResNet50_FPN_V2_Weights)#.to(device)model = fasterrcnn_resnet50_fpn_v2(weights=weights)\n",
     "in_features = model.roi_heads.box_predictor.cls_score.in_features\n",
     "num_classes = len(coco.cats.keys())\n",
     "# 미리 학습된 모델의 머리 부분을 새로운 것으로 교체합니다\n",
     "model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
     "\n",
-    "load_model = torch.load('./model/v2_backbone_none/pretrained_8_best.pt')\n",
+    "load_model = torch.load('./model/v2_backbone_none/pretrained_8_best.pt',map_location=torch.device('cpu'))\n",
     "\n",
     "model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1156310100>"
+       "<matplotlib.image.AxesImage at 0x7f05aea26ee0>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -468,10 +468,10 @@
     }
    ],
    "source": [
-    "torch.cuda.empty_cache()\n",
+    "# torch.cuda.empty_cache()\n",
     "with torch.no_grad():\n",
     "    load_model.eval()\n",
-    "    prediction = load_model([img.to(device)])\n",
+    "    prediction = load_model([img.to('cpu')])\n",
     "    pred = prediction[0]   \n",
     "fig = plt.figure(figsize=(12,10))\n",
     "plt.imshow(\n",
@@ -505,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
